# pherialize

./: CMakeLists.txt  README.md
pherialize/: CMakeLists.txt  Mixed.cpp  Mixed.hpp  MixedArray.cpp  MixedArray.hpp  export.hpp  types.hpp  unserialize.cpp  unserialize.hpp
tests/: CMakeLists.txt  MixedArray_test.cpp  Mixed_test.cpp  unserialize_test.cpp
