CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

ENABLE_TESTING()

FIND_PACKAGE(Boost 1.53 COMPONENTS unit_test_framework REQUIRED)

IF(NOT Boost_FOUND)
	MESSAGE(FATAL_ERROR "Could not find Boost library >= 1.53")
ENDIF()

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
)

ADD_SUBDIRECTORY(pherialize)
ADD_SUBDIRECTORY(tests)
