INCLUDE(GenerateExportHeader)
ADD_COMPILER_EXPORT_FLAGS()

FILE(
	GLOB
	PHERIALIZE_LIBRARY_SRC_FILES
	*.cpp
)

FILE(
	GLOB
	PHERIALIZE_LIBRARY_HEADER_FILES
	*.hpp
)

# Shared library
ADD_LIBRARY(
	pherialize
	SHARED
	${PHERIALIZE_LIBRARY_SRC_FILES}
)

GENERATE_EXPORT_HEADER(
	pherialize
	BASE_NAME pherialize
	STATIC_DEFINE PHERIALIZE_STATIC
	EXPORT_FILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/export-shared.hpp
)

SET_TARGET_PROPERTIES(
	pherialize
	PROPERTIES
	VERSION "1"
	SOVERSION "1"
	COMPILE_FLAGS -DPHERIALIZE_SHARED
)

# Static library
ADD_LIBRARY(
	pherialize-static
	STATIC
	${PHERIALIZE_LIBRARY_SRC_FILES}
)

GENERATE_EXPORT_HEADER(
	pherialize-static
	BASE_NAME pherialize
	STATIC_DEFINE PHERIALIZE_STATIC
	EXPORT_FILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/export-static.hpp
)

SET_TARGET_PROPERTIES(
	pherialize-static
	PROPERTIES
	OUTPUT_NAME pherialize
	COMPILE_FLAGS -DPHERIALIZE_STATIC
)

# Install libs (.so .a)
INSTALL(
	TARGETS pherialize
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
)

INSTALL(
	TARGETS pherialize-static
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
)

# Install include files (.hpp)
INSTALL(
	DIRECTORY .
	DESTINATION include/pherialize
	FILES_MATCHING PATTERN "*.hpp"
)
